<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather!</string>
    <string name="moscow">Moscow</string>
    <string name="search">Search</string>
    <string name="saint_petersburg">Saint Petersburg</string>
    <string name="nizhny_novgorod">Nizhny Novgorod</string>
    <string name="enter_the_name_of_the_city">Enter the name of the city</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">pressure</string>
    <string name="city">City</string>
    <string name="_10_m_s">10 m/s</string>
    <string name="_40">40%</string>
    <string name="dark_theme">Dark theme</string>
    <string name="notification">Notification</string>
    <string name="unit">Unit</string>
</resources>
