<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDECE9"
    tools:context=".MainActivityTwo">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:background="#94DCD5"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@id/editText2"
        app:layout_constraintStart_toEndOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="257dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/enter_the_name_of_the_city"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moscow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/editText2"
        app:layout_constraintTop_toBottomOf="@id/editText2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saint_petersburg"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/textView11"
        app:layout_constraintTop_toBottomOf="@id/textView11"
        app:layout_constraintBottom_toBottomOf="@id/checkBox2"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nizhny_novgorod"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/textView12"
        app:layout_constraintTop_toBottomOf="@id/textView12"
        app:layout_constraintBottom_toBottomOf="@id/checkBox3"/>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/humidity"
        app:layout_constraintBottom_toBottomOf="@id/textView11"
        app:layout_constraintStart_toEndOf="@id/textView13" />
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        app:layout_constraintStart_toStartOf="@id/checkBox"
        app:layout_constraintTop_toBottomOf="@id/checkBox"/>
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uv_index"
        app:layout_constraintStart_toStartOf="@id/checkBox2"
        app:layout_constraintTop_toBottomOf="@id/checkBox2"/>

</androidx.constraintlayout.widget.ConstraintLayout>